<resources>
    <string name="app_name">AndroidFundamentalsApp</string>
    <string name="movie_min_age">%1$d+</string>
    <string name="avengers_min_age">13+</string>
    <string name="avengers_title">Avengers: End Game</string>
    <string name="avengers_genre">Action, Adventure, Fantasy</string>
    <string name="movie_reviews">%1$d Reviews</string>
    <string name="storyline_title">Storyline</string>
    <string name="avengers_storyline">After the devastating events of Avengers: Infinity War, the universe is in ruins. With the help of remaining allies, the Avengers assemble once more in order to reverse Thanos\' actions and restore balance to the universe.</string>
    <string name="cast">Cast</string>
    <string name="robert_downey_jr">Robert Downey Jr.</string>
    <string name="chris_evans">Chris Evans</string>
    <string name="mark_ruffalo">Mark Ruffalo</string>
    <string name="chris_hemsworth">Chris Hemsworth</string>
    <string name="back">Back</string>
    <string name="see_movie_details">See movie details</string>
    <string name="movies_list_title">Movies list</string>
    <string name="movie_length">%1$d Min</string>
</resources>