<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/movie_details_bg">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:context=".MovieDetailsActivity">

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline_left"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_begin="@dimen/activity_standard_margin"
            app:layout_constraintStart_toStartOf="parent" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline_right"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_end="@dimen/activity_standard_margin"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="2dp"
            android:layout_marginTop="56dp"
            android:drawableLeft="@drawable/ic_back_arrow"
            android:drawablePadding="@dimen/activity_medium_margin"
            android:text="@string/back"
            android:textSize="@dimen/small_text_size"
            android:textColor="@color/grey"
            app:layout_constraintStart_toEndOf="@id/guideline_left"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/age"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/avengers_min_age"
            android:textColor="@color/white"
            android:textSize="@dimen/small_text_size"
            app:layout_constraintBottom_toTopOf="@+id/movie_title"
            app:layout_constraintStart_toEndOf="@id/guideline_left"
            app:layout_constraintTop_toBottomOf="@+id/back"
            app:layout_constraintVertical_chainStyle="packed" />

        <TextView
            android:id="@+id/movie_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:lines="2"
            android:maxWidth="240dp"
            android:text="@string/avengers_title"
            android:textColor="@color/white_50"
            android:textSize="@dimen/huge_text_size"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@+id/genre"
            app:layout_constraintStart_toEndOf="@id/guideline_left"
            app:layout_constraintTop_toBottomOf="@+id/age" />

        <TextView
            android:id="@+id/genre"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/avengers_genre"
            android:textColor="@color/pink"
            android:textSize="@dimen/regular_text_size"
            app:layout_constraintBottom_toTopOf="@+id/rating"
            app:layout_constraintStart_toEndOf="@id/guideline_left"
            app:layout_constraintTop_toBottomOf="@+id/movie_title" />

        <RatingBar
            android:id="@+id/rating"
            style="@style/Widget.AppCompat.RatingBar.Small"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:minHeight="12dp"
            android:maxHeight="12dp"
            android:indeterminateDrawable="@drawable/rating"
            android:numStars="5"
            android:progressBackgroundTint="@color/grey"
            android:progressDrawable="@drawable/rating"
            android:rating="4"
            app:layout_constraintBottom_toTopOf="@+id/storyline_title"
            app:layout_constraintStart_toEndOf="@id/guideline_left"
            app:layout_constraintTop_toBottomOf="@+id/genre"
            app:layout_constraintEnd_toStartOf="@id/reviews"/>

        <TextView
            android:id="@+id/reviews"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/avengers_reviews"
            android:textAllCaps="true"
            android:textColor="@color/grey"
            android:textSize="@dimen/regular_text_size"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="@id/rating"
            app:layout_constraintStart_toEndOf="@id/rating"
            app:layout_constraintTop_toTopOf="@id/rating" />

        <TextView
            android:id="@+id/storyline_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="28dp"
            android:layout_marginBottom="@dimen/activity_small_margin"
            android:paddingTop="@dimen/activity_small_margin"
            android:paddingBottom="@dimen/activity_small_margin"
            android:text="@string/storyline_title"
            android:textColor="@color/white_50"
            android:textSize="@dimen/text_medium_size"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@+id/storyline"
            app:layout_constraintStart_toEndOf="@id/guideline_left"
            app:layout_constraintTop_toBottomOf="@+id/rating" />

        <TextView
            android:id="@+id/storyline"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/activity_big_margin"
            android:text="@string/avengers_storyline"
            android:textColor="@color/white"
            android:textSize="@dimen/text_medium_size"
            app:layout_constraintBottom_toTopOf="@+id/cast"
            app:layout_constraintEnd_toStartOf="@id/guideline_right"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@id/guideline_left"
            app:layout_constraintTop_toBottomOf="@+id/storyline_title" />

        <TextView
            android:id="@+id/cast"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="12dp"
            android:text="@string/cast"
            android:textSize="@dimen/text_medium_size"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@+id/barrier"
            app:layout_constraintStart_toEndOf="@id/guideline_left"
            app:layout_constraintTop_toBottomOf="@+id/storyline" />

        <androidx.constraintlayout.widget.Barrier
            android:id="@+id/barrier"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:barrierDirection="top"
            app:constraint_referenced_ids="downey_ava,evans_ava,ruffalo_ava,hemsworth_ava"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/cast" />

        <ImageView
            android:id="@+id/downey_ava"
            style="@style/ActorAva"
            android:layout_marginEnd="@dimen/activity_medium_margin"
            android:src="@drawable/robert_downey_jr"
            app:layout_constraintBottom_toTopOf="@id/downey_name"
            app:layout_constraintEnd_toStartOf="@id/evans_ava"
            app:layout_constraintStart_toEndOf="@id/guideline_left"
            app:layout_constraintTop_toBottomOf="@id/barrier" />

        <TextView
            android:id="@+id/downey_name"
            style="@style/ActorName"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:maxLines="2"
            android:text="@string/robert_downey_jr"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@id/downey_ava"
            app:layout_constraintStart_toStartOf="@id/downey_ava"
            app:layout_constraintTop_toBottomOf="@id/downey_ava" />

        <ImageView
            android:id="@+id/evans_ava"
            style="@style/ActorAva"
            android:layout_marginEnd="@dimen/activity_medium_margin"
            android:src="@drawable/chris_evans"
            app:layout_constraintEnd_toStartOf="@id/ruffalo_ava"
            app:layout_constraintStart_toEndOf="@id/downey_ava"
            app:layout_constraintTop_toBottomOf="@id/barrier" />

        <TextView
            style="@style/ActorName"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:maxLines="2"
            android:text="@string/chris_evans"
            app:layout_constraintEnd_toEndOf="@id/evans_ava"
            app:layout_constraintStart_toStartOf="@id/evans_ava"
            app:layout_constraintTop_toBottomOf="@id/evans_ava" />

        <ImageView
            android:id="@+id/ruffalo_ava"
            style="@style/ActorAva"
            android:layout_marginEnd="@dimen/activity_medium_margin"
            android:src="@drawable/mark_ruffalo"
            app:layout_constraintEnd_toStartOf="@id/hemsworth_ava"
            app:layout_constraintStart_toEndOf="@id/evans_ava"
            app:layout_constraintTop_toBottomOf="@id/barrier" />

        <TextView
            style="@style/ActorName"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:maxLines="2"
            android:text="@string/mark_ruffalo"
            app:layout_constraintEnd_toEndOf="@id/ruffalo_ava"
            app:layout_constraintStart_toStartOf="@id/ruffalo_ava"
            app:layout_constraintTop_toBottomOf="@id/ruffalo_ava" />

        <ImageView
            android:id="@+id/hemsworth_ava"
            style="@style/ActorAva"
            android:src="@drawable/chris_hemsworth"
            app:layout_constraintEnd_toStartOf="@id/guideline_right"
            app:layout_constraintStart_toEndOf="@id/ruffalo_ava"
            app:layout_constraintTop_toBottomOf="@id/barrier" />

        <TextView
            style="@style/ActorName"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:maxLines="2"
            android:text="@string/chris_hemsworth"
            app:layout_constraintEnd_toEndOf="@id/hemsworth_ava"
            app:layout_constraintStart_toStartOf="@id/hemsworth_ava"
            app:layout_constraintTop_toBottomOf="@id/hemsworth_ava" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>

