<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/background_img"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:scaleType="centerCrop"
            app:layout_constraintBottom_toTopOf="@id/grey_bgd"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_weight="0.3"
            tools:src="@tools:sample/backgrounds/scenic" />

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:scaleType="centerCrop"
            android:src="@drawable/movie_details_bgd"
            app:layout_constraintTop_toTopOf="@id/background_img"
            app:layout_constraintBottom_toBottomOf="@id/background_img"/>

        <TextView
            android:id="@+id/grey_bgd"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:background="@color/dark_grey"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/background_img"
            app:layout_constraintVertical_weight="0.7" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline_left"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_begin="@dimen/activity_standard_margin"
            app:layout_constraintStart_toStartOf="parent" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline_right"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_end="@dimen/activity_standard_margin"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/back"
            android:paddingTop="@dimen/activity_standard_margin"
            android:paddingBottom="@dimen/activity_standard_margin"
            android:paddingEnd="@dimen/activity_standard_margin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="2dp"
            android:layout_marginTop="56dp"
            android:drawableLeft="@drawable/ic_back_arrow"
            android:drawablePadding="@dimen/activity_medium_margin"
            android:text="@string/back"
            android:textColor="@color/white"
            android:textSize="@dimen/text_small_size"
            app:layout_constraintStart_toEndOf="@id/guideline_left"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/age"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/avengers_min_age"
            android:textColor="@color/white"
            android:textSize="@dimen/text_small_size"
            app:layout_constraintBottom_toTopOf="@+id/movie_title"
            app:layout_constraintStart_toEndOf="@id/guideline_left"
            app:layout_constraintTop_toBottomOf="@+id/back"
            app:layout_constraintVertical_chainStyle="packed" />

        <TextView
            android:id="@+id/movie_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/avengers_title"
            android:textColor="@color/white_50"
            android:textSize="@dimen/huge_text_size"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@+id/genre"
            app:layout_constraintStart_toEndOf="@id/guideline_left"
            app:layout_constraintTop_toBottomOf="@+id/age" />

        <TextView
            android:id="@+id/genre"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/avengers_genre"
            android:textColor="@color/pink"
            android:textSize="@dimen/regular_text_size"
            app:layout_constraintBottom_toTopOf="@+id/rating_layout"
            app:layout_constraintStart_toEndOf="@id/guideline_left"
            app:layout_constraintTop_toBottomOf="@+id/movie_title" />

        <include
            android:id="@+id/rating_layout"
            layout="@layout/rating_bar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toTopOf="@+id/reviews"
            app:layout_constraintStart_toEndOf="@id/guideline_left"
            app:layout_constraintTop_toBottomOf="@+id/genre" />

        <TextView
            android:id="@+id/reviews"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/activity_medium_margin"
            android:textAllCaps="true"
            android:textColor="@color/grey"
            android:textSize="@dimen/text_tiny_size"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@+id/storyline_title"
            app:layout_constraintStart_toEndOf="@id/guideline_left"
            app:layout_constraintTop_toBottomOf="@+id/rating_layout"
            tools:text="@string/avengers_reviews" />

        <TextView
            android:id="@+id/storyline_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="28dp"
            android:layout_marginBottom="@dimen/activity_small_margin"
            android:paddingTop="@dimen/activity_small_margin"
            android:paddingBottom="@dimen/activity_small_margin"
            android:text="@string/storyline_title"
            android:textColor="@color/white_50"
            android:textSize="@dimen/text_medium_size"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@+id/storyline"
            app:layout_constraintStart_toEndOf="@id/guideline_left"
            app:layout_constraintTop_toBottomOf="@+id/reviews" />

        <TextView
            android:id="@+id/storyline"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/activity_big_margin"
            android:text="@string/avengers_storyline"
            android:textColor="@color/white"
            android:textSize="@dimen/text_medium_size"
            app:layout_constraintBottom_toTopOf="@+id/cast"
            app:layout_constraintEnd_toStartOf="@id/guideline_right"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@id/guideline_left"
            app:layout_constraintTop_toBottomOf="@+id/storyline_title" />

        <TextView
            android:id="@+id/cast"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="12dp"
            android:text="@string/cast"
            android:textSize="@dimen/text_medium_size"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@+id/barrier"
            app:layout_constraintStart_toEndOf="@id/guideline_left"
            app:layout_constraintTop_toBottomOf="@+id/storyline" />

        <androidx.constraintlayout.widget.Barrier
            android:id="@+id/barrier"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:barrierDirection="top"
            app:constraint_referenced_ids="actors"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/cast" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/actors"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:orientation="horizontal"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toEndOf="@id/guideline_left"
            app:layout_constraintTop_toBottomOf="@id/barrier"
            tools:listitem="@layout/actor_item" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>
