<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/movie_card"
    style="@style/MovieCard"
    android:layout_width="wrap_content"
    android:layout_height="300dp"
    android:background="@drawable/card_bgd_outlined"
    android:backgroundTint="@android:color/transparent"
    android:padding="0dp"
    app:cardCornerRadius="@dimen/card_radius"
    app:cardUseCompatPadding="true">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="2dp"
        android:scaleType="centerCrop"
        android:src="@drawable/avengers_bgd" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="top"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/min_age"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/activity_medium_margin"
                android:background="@drawable/age_bgd"
                android:paddingStart="@dimen/activity_small_margin"
                android:paddingTop="@dimen/activity_medium_margin"
                android:paddingEnd="@dimen/activity_small_margin"
                android:paddingBottom="@dimen/activity_medium_margin"
                android:text="@string/movie_min_age"
                android:textSize="@dimen/small_text_size"
                android:textStyle="bold" />

            <Space
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_12dp"
                android:layout_marginEnd="6dp"
                android:src="@drawable/ic_like" />
        </LinearLayout>

        <Space
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1" />

        <TextView
            android:id="@+id/genres"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/activity_medium_margin"
            android:textColor="@color/pink"
            android:textSize="@dimen/tiny_text_size"
            tools:text="@string/avengers_genre" />

        <include
            android:id="@+id/rating"
            layout="@layout/rating"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/activity_medium_margin" />

        <TextView
            android:id="@+id/movie_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:layout_marginStart="@dimen/activity_medium_margin"
            android:layout_marginTop="@dimen/activity_standard_margin"
            android:text="@string/avengers_title"
            android:textSize="@dimen/text_medium_size"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/movie_length"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/activity_medium_margin"
            android:layout_marginEnd="@dimen/activity_medium_margin"
            android:layout_marginBottom="@dimen/activity_medium_margin"
            android:textAllCaps="true"
            android:textColor="@color/grey_medium"
            android:textStyle="bold"
            tools:text="137 Min" />
    </LinearLayout>
</com.google.android.material.card.MaterialCardView>
